--- a/PartI/00-I.Overview-of-Spring-Framework.md
+++ b/PartI/00-I.Overview-of-Spring-Framework.md
@@ -1,4 +1,4 @@
-# Part I. Overview of Spring Framework
+## Part I. Overview of Spring Framework
 
 The Spring Framework is a lightweight solution and a potential one-stop-shop for building your enterprise-ready applications. However, Spring is modular, allowing you to use only those parts that you need, without having to bring in the rest. You can use the IoC container, with any web framework on top, but you can also use only the[Hibernate integration code](http://docs.spring.io/spring/docs/5.0.0.M4/spring-framework-reference/htmlsingle/#orm-hibernate)or the[JDBC abstraction layer](http://docs.spring.io/spring/docs/5.0.0.M4/spring-framework-reference/htmlsingle/#jdbc-introduction). The Spring Framework supports declarative transaction management, remote access to your logic through RMI or web services, and various options for persisting your data. It offers a full-featured[MVC framework](http://docs.spring.io/spring/docs/5.0.0.M4/spring-framework-reference/htmlsingle/#mvc-introduction), and enables you to integrate[AOP](http://docs.spring.io/spring/docs/5.0.0.M4/spring-framework-reference/htmlsingle/#aop-introduction)transparently into your software.
 
@@ -6,3 +6,15 @@ Spring is designed to be non-intrusive, meaning that your domain logic code gene
 
 This document is a reference guide to Spring Framework features. If you have any requests, comments, or questions on this document, please post them on the[user mailing list](https://groups.google.com/forum/#!forum/spring-framework-contrib). Questions on the Framework itself should be asked on StackOverflow \(see[https://spring.io/questions](https://spring.io/questions)\).
 
+---
+
+## Part I. Spring 框架概述
+
+* 轻量，大小和运行开销都是轻量级的；
+* 模块化，Spring 被设计为由 7 个可独立存在的模块组成，可以只使用需要的模块而忽略其余模块；
+* 支持声明式事务管理，通过声明的方式灵活的进行事务管理，从单调繁琐的事务管理代码中解脱出来；
+* 方便解耦，利用 Spring 提供的 IoC 容器，可以将对象之间的依赖关系交由 Spring 控制，避免硬编码造成的紧耦合；
+* AOP 编程，通过 Spring 提供的 AOP 功能，可以方便的进行面向切面编程，许多 OOP 不易实现的功能可以通过 AOP 轻松实现；
+* 低侵入式，领域逻辑代码不需要依赖 Spring 框架本身，代码污染极低。
+
+本文档是 Spring Framework 功能的参考指南，如果你对本文档有任何要求、意见或者问题，均可发送到 [用户邮件列表](https://groups.google.com/forum/#!forum/spring-framework-contrib)。对于 Spring Framework 本身的问题可在 StackOverflow 上提问 (see https://spring.io/questions)。
