--- a/PartI/01-1.Getting-Started-with-Spring.md
+++ b/PartI/01-1.Getting-Started-with-Spring.md
@@ -12,6 +12,6 @@ You can use[start.spring.io](http://start.spring.io/)to generate a basic project
 
 本参考指南介绍了 Spring 框架的详细信息。提供 Spring 所有功能的全面文档，以及一些相关底层概念（如“依赖注入”）的背景资料。
 
-如果刚接触 Spring，你可能希望通过创建一个基于 [Spring Boot](http://projects.spring.io/spring-boot/) 应用来开始使用 Spring 框架。Spring Boot 提供了一种快速（且特定）的方式来创建产品级 Spring 应用。它基于 Spring 框架，且约定优于配置，旨在助你尽快地将应用运行起来。
+如果刚接触 Spring，可以通过创建一个基于 [Spring Boot](http://projects.spring.io/spring-boot/) 应用来开始使用 Spring 框架。Spring Boot 是 Spring 框架“约定优于配置”的实现，舍弃了繁琐的 XML 配置，旨在助你尽快地将应用运行起来。
 
 你可以使用 [start.spring.io](http://start.spring.io/) 或按照一个类似 [Getting Started Building a RESTful Web Service](https://spring.io/guides/gs/rest-service/) 这样的 [入门指南](https://spring.io/guides) 来生成一个基本工程。这些指南介绍的内容都很专一，比较容易理解，其中大部分基于 Spring Boot 。另外他们中还涵盖了一些解决特定问题的 Spring 组合示例。
