--- a/PartI/12-2.3.1.Dependency-Management-and-Naming-Conventions.md
+++ b/PartI/12-2.3.1.Dependency-Management-and-Naming-Conventions.md
@@ -6,15 +6,7 @@ If you are going to use Spring you need to get a copy of the jar libraries that 
 
 Each release of the Spring Framework will publish artifacts to the following places:
 
-* Maven Central, which is the default repository that Maven queries, and does not require any special configuration to use. Many of the common libraries that Spring depends on also are available from Maven Central and a large section of the Spring community uses Maven for dependency management, so this is convenient for them. The names of the jars here are in the form
-  `spring-*-`
-  `<`
-  `version`
-  `>`
-  `.jar`
-  and the Maven groupId is
-  `org.springframework`
-  .
+* Maven Central, which is the default repository that Maven queries, and does not require any special configuration to use. Many of the common libraries that Spring depends on also are available from Maven Central and a large section of the Spring community uses Maven for dependency management, so this is convenient for them. The names of the jars here are in the form `spring-*-<version>.jar` and the Maven groupId is `org.springframework`.
 * In a public Maven repository hosted specifically for Spring. In addition to the final GA releases, this repository also hosts development snapshots and milestones. The jar file names are in the same form as Maven Central, so this is a useful place to get development versions of Spring to use with other libraries deployed in Maven Central. This repository also contains a bundle distribution zip file that contains all Spring jars bundled together for easy download.
 
 So the first thing you need to decide is how to manage your dependencies: we generally recommend the use of an automated system like Maven, Gradle or Ivy, but you can also do it manually by downloading all the jars yourself.
