--- a/PartI/03-2.1.Dependency-Injection-and-Inversion-of-Control.md
+++ b/PartI/03-2.1.Dependency-Injection-and-Inversion-of-Control.md
@@ -1,4 +1,4 @@
-## 2.1 Dependency Injection and Inversion of Control
+## 2.1 依赖注入和控制反转
 
 A Java application — a loose term that runs the gamut from constrained, embedded applications to n-tier, server-side enterprise applications — typically consists of objects that collaborate to form the application proper. Thus the objects in an application have_dependencies_on each other.
 
@@ -10,3 +10,8 @@ The Spring Framework_Inversion of Control_\(IoC\) component addresses this conce
 > 
 > "_The question is, what aspect of control are \[they\] inverting?_" Martin Fowler posed this question about Inversion of Control \(IoC\)[on his site](http://martinfowler.com/articles/injection.html)in 2004. Fowler suggested renaming the principle to make it more self-explanatory and came up with_Dependency Injection_.
 
+## 2.1 依赖注入和控制反转
+
+IoC （Inversion of Control，控制反转）不是具体的技术，而是一种设计思想，其基本概念是：不创建对象，而是描述创建对象的方式（使用配置文件或注解方式描述）。在代码中不直接与对象和服务连接，但是在配置文件中描述哪一个组件需要哪一项服务，容器（Spring 中就是 IoC 容器）负责将其联系在一起（依赖注入）。
+
+比如，一个复杂的系统需要很多对象协同工作，而它们之间必然会产生相互依赖，当需要在一个对象中调用其它对象提供的方法时，通常是使用 new 关键字创建一个该类的实例，有经验的开发者可能会使用工厂模式或其它如建造者模式来创建对象，但总归是要开发者自己创建并管理。
