--- a/PartI/00-I.Overview-of-Spring-Framework.md
+++ b/PartI/00-I.Overview-of-Spring-Framework.md
@@ -1,20 +1,9 @@
-## Part I. Overview of Spring Framework
-
-The Spring Framework is a lightweight solution and a potential one-stop-shop for building your enterprise-ready applications. However, Spring is modular, allowing you to use only those parts that you need, without having to bring in the rest. You can use the IoC container, with any web framework on top, but you can also use only the[Hibernate integration code](http://docs.spring.io/spring/docs/5.0.0.M4/spring-framework-reference/htmlsingle/#orm-hibernate)or the[JDBC abstraction layer](http://docs.spring.io/spring/docs/5.0.0.M4/spring-framework-reference/htmlsingle/#jdbc-introduction). The Spring Framework supports declarative transaction management, remote access to your logic through RMI or web services, and various options for persisting your data. It offers a full-featured[MVC framework](http://docs.spring.io/spring/docs/5.0.0.M4/spring-framework-reference/htmlsingle/#mvc-introduction), and enables you to integrate[AOP](http://docs.spring.io/spring/docs/5.0.0.M4/spring-framework-reference/htmlsingle/#aop-introduction)transparently into your software.
-
-Spring is designed to be non-intrusive, meaning that your domain logic code generally has no dependencies on the framework itself. In your integration layer \(such as the data access layer\), some dependencies on the data access technology and the Spring libraries will exist. However, it should be easy to isolate these dependencies from the rest of your code base.
-
-This document is a reference guide to Spring Framework features. If you have any requests, comments, or questions on this document, please post them on the[user mailing list](https://groups.google.com/forum/#!forum/spring-framework-contrib). Questions on the Framework itself should be asked on StackOverflow \(see[https://spring.io/questions](https://spring.io/questions)\).
-
----
-
 ## Part I. Spring 框架概述
 
-* 轻量，大小和运行开销都是轻量级的；
-* 模块化，Spring 被设计为大约 20 个可独立存在的模块组成，可以只使用需要的模块而忽略其余模块；
-* 支持声明式事务管理，通过声明的方式灵活的进行事务管理，从单调繁琐的事务管理代码中解脱出来；
-* 方便解耦，利用 Spring 提供的 IoC 容器，可以将对象之间的依赖关系交由 Spring 控制，避免硬编码造成的紧耦合；
-* AOP 编程，通过 Spring 提供的 AOP 功能，可以方便的进行面向切面编程，许多 OOP 不易实现的功能可以通过 AOP 轻松实现；
-* 低侵入式，领域逻辑代码不需要依赖 Spring 框架本身，代码污染极低。
+Spring 是一个开源框架，为创建企业级应用程序提供了一个轻量级的解决方案。Spring 的主要优势之一是分层架构，虽然 Spring 包含的功能很多，但这些功能被设计为多个可独立存在的模块，你可以只使用需要的模块而忽略其余模块。同时 Spring 还可以很好的和当下主流开发框架进行集成，如 Struts2、 Hibernate、 Mybatis、 JTA等。
+
+Spring 提供了一个AOP（面向切面编程）框架，许多 OOP 不易实现的功能可以通过 AOP 轻松实现。另外，利用 Spring 提供的 IoC 容器，可以将对象之间的依赖关系交由 Spring 控制，从而避免硬编码造成的紧耦合。
+
+Spring 支持声明式事务管理，通过声明的方式灵活的进行事务管理，使开发者从单调繁琐的事务管理代码中解脱出来。Spring 是低侵入式的，领域逻辑代码不需要依赖 Spring 框架本身，代码污染极低。
 
 本文档是 Spring 框架的参考指南，如果你对本文档有任何要求、意见或者问题，均可发送到 [用户邮件列表](https://groups.google.com/forum/#!forum/spring-framework-contrib)。对于 Spring 框架本身的问题可在 StackOverflow 上提问 (see https://spring.io/questions)。
