--- a/PartI/01-1.Getting-Started-with-Spring.md
+++ b/PartI/01-1.Getting-Started-with-Spring.md
@@ -1,17 +1,7 @@
-## 1. Getting Started with Spring
-
-This reference guide provides detailed information about the Spring Framework. It provides comprehensive documentation for all features, as well as some background about the underlying concepts \(such as_"Dependency Injection"_\) that Spring has embraced.
-
-If you are just getting started with Spring, you may want to begin using the Spring Framework by creating a[Spring Boot](http://projects.spring.io/spring-boot/)based application. Spring Boot provides a quick \(and opinionated\) way to create a production-ready Spring based application. It is based on the Spring Framework, favors convention over configuration, and is designed to get you up and running as quickly as possible.
-
-You can use[start.spring.io](http://start.spring.io/)to generate a basic project or follow one of the["Getting Started" guides](https://spring.io/guides)like the[Getting Started Building a RESTful Web Service](https://spring.io/guides/gs/rest-service/)one. As well as being easier to digest, these guides are very_task focused_, and most of them are based on Spring Boot. They also cover other projects from the Spring portfolio that you might want to consider when solving a particular problem.
-
----
-
 ## 1. Spring 入门
 
 本参考指南介绍了 Spring 框架的详细信息。提供 Spring 所有功能的全面文档，以及一些相关底层概念（如“依赖注入”）的背景资料。
 
 如果刚接触 Spring，可以通过创建一个基于 [Spring Boot](http://projects.spring.io/spring-boot/) 应用来开始使用 Spring 框架。Spring Boot 是 Spring 框架“约定优于配置”的实现，舍弃了繁琐的 XML 配置，旨在助你尽快地将应用运行起来。
 
-你可以使用 [start.spring.io](http://start.spring.io/) 或按照一个类似 [Getting Started Building a RESTful Web Service](https://spring.io/guides/gs/rest-service/) 这样的 [入门指南](https://spring.io/guides) 来生成一个基本工程。这些指南介绍的内容都很专一，比较容易理解，其中大部分基于 Spring Boot 。另外他们中还涵盖了一些解决特定问题的 Spring 组合示例。
+你可以使用 [start.spring.io](http://start.spring.io/) 或按照一个类似 [Getting Started Building a RESTful Web Service](https://spring.io/guides/gs/rest-service/) 这样的 [入门指南](https://spring.io/guides) 来生成一个基本工程。这些指南介绍的内容都很专一，比较容易理解，其中大部分基于 Spring Boot 。另外还有一些 Spring 各模块的组合应用示例。
