--- a/PartI/02-2.Introduction-to-the-Spring-Framework.md
+++ b/PartI/02-2.Introduction-to-the-Spring-Framework.md
@@ -1,23 +1,8 @@
-## 2. Introduction to the Spring Framework
-
-The Spring Framework is a Java platform that provides comprehensive infrastructure support for developing Java applications. Spring handles the infrastructure so you can focus on your application.
-
-Spring enables you to build applications from "plain old Java objects" \(POJOs\) and to apply enterprise services non-invasively to POJOs. This capability applies to the Java SE programming model and to full and partial Java EE.
-
-Examples of how you, as an application developer, can benefit from the Spring platform:
-
-* Make a Java method execute in a database transaction without having to deal with transaction APIs.
-* Make a local Java method a remote procedure without having to deal with remote APIs.
-* Make a local Java method a management operation without having to deal with JMX APIs.
-* Make a local Java method a message handler without having to deal with JMS APIs.
-
----
-
 ## 2. Spring 框架简介
 
 Spring 框架是一个 Java 平台框架，提供广泛全面的基础功能来支撑 Java 应用的开发，Spring 负责处理这些基础架构，以便你可以专注于你的应用。
 
-Spring 让你可以使用“简单 Java 对象”（POJOs）来构建应用，并使企业服务对 POJOs 无侵入。这种能力完全适用于 Java SE 编程模型和部分 Java EE。
+Spring 可以使开发人员只使用 POJOs 来开发企业级应用程序，并且对 POJOs 无代码侵入。早起的很多框架如 EJB、 Struts、 WebWork 等会强迫应用继承它们的类或实现它们的接口，导致应用与框架绑死。而 Spring 可以使这种代码侵入降到最低，最坏的情况是一个类或许会使用 Spring 的注解。
 
 下面的例子说明作为开发者使用 Spring 平台带来的好处：
 
