依赖注入和控制反转

--- a/PartI/03-2.1.Dependency-Injection-and-Inversion-of-Control.md
+++ b/PartI/03-2.1.Dependency-Injection-and-Inversion-of-Control.md
@@ -1,17 +1,15 @@
 ## 2.1 依赖注入和控制反转
 
-A Java application — a loose term that runs the gamut from constrained, embedded applications to n-tier, server-side enterprise applications — typically consists of objects that collaborate to form the application proper. Thus the objects in an application have_dependencies_on each other.
+**IoC（Inversion of Control，控制反转）**不是具体的技术，而是一种设计思想，其基本概念是：不创建对象，而是描述创建对象的方式（使用配置文件或注解方式描述）。在代码中不直接与依赖的对象关联，而是在配置文件中（或注解）描述依赖关系，由 IoC 容器负责创建对象并将其联系在一起（依赖注入）。
 
-Although the Java platform provides a wealth of application development functionality, it lacks the means to organize the basic building blocks into a coherent whole, leaving that task to architects and developers. Although you can use design patterns such as_Factory_,_Abstract Factory_,_Builder_,_Decorator_, and_Service Locator_to compose the various classes and object instances that make up an application, these patterns are simply that: best practices given a name, with a description of what the pattern does, where to apply it, the problems it addresses, and so forth. Patterns are formalized best practices that_you must implement yourself_in your application.
+要理解 IoC ，就要搞清楚这样几个问题：谁控制谁？控制什么？为何是反转？什么东西被反转了？
 
-The Spring Framework_Inversion of Control_\(IoC\) component addresses this concern by providing a formalized means of composing disparate components into a fully working application ready for use. The Spring Framework codifies formalized design patterns as first-class objects that you can integrate into your own application\(s\). Numerous organizations and institutions use the Spring Framework in this manner to engineer robust,_maintainable_applications.
+一个复杂的系统需要很多对象协同工作，而它们之间必然会产生相互依赖，在传统程序设计中，当需要在一个对象中调用其它对象提供的方法时，通常是使用 new 关键字创建一个该类的实例，有经验的开发者可能会使用工厂模式或其它如建造者模式来创建对象，但总归是要开发者自己创建并管理。而在 IoC 思想中，由 IoC 容器来控制对象的创建（谁控制谁）。不光是对象的创建，包括外部资源的获取，如数据库连接、文件等（控制什么）。传统程序设计中，我们需要自己在对象中主动去创建或获取依赖对象（正），而 IoC 思想中，由 IoC 容器帮我们查找并注入依赖对象，对象只是被动的接受依赖对象（反转），也就是说，依赖对象的获取被反转了（什么东西被反转了）。
 
-> **Background**
-> 
-> "_The question is, what aspect of control are \[they\] inverting?_" Martin Fowler posed this question about Inversion of Control \(IoC\)[on his site](http://martinfowler.com/articles/injection.html)in 2004. Fowler suggested renaming the principle to make it more self-explanatory and came up with_Dependency Injection_.
+IoC 是 Spring 的核心，放在 Spring 框架中来说，就是由 Spring 负责控制对象的生命周期和对象之间的关系。利用 IoC 可以降低对象与对象之间的耦合度，使程序的体系结构变得更加灵活，同时方便测试和功能复用。
 
-## 2.1 依赖注入和控制反转
+**DI（Dependency Injection，依赖注入）**往往和 IoC 一起出现，事实上 DI 和 IoC 是对同一个概念在不同角度的描述。DI 是 Martin Fowler 在 2004 年为了解释”IoC 控制反转了什么“时提出的新名称。其描述的是组件之间的依赖关系由容器在运行期决定，即由容器动态的将某个依赖关系注入到组件中。IoC 容器在向某个对象提供其依赖对象时，就是通过依赖注入实现的。
 
-IoC （Inversion of Control，控制反转）不是具体的技术，而是一种设计思想，其基本概念是：不创建对象，而是描述创建对象的方式（使用配置文件或注解方式描述）。在代码中不直接与对象和服务连接，但是在配置文件中描述哪一个组件需要哪一项服务，容器（Spring 中就是 IoC 容器）负责将其联系在一起（依赖注入）。
+要理解 DI，同样要搞清楚几个问题：谁依赖谁？为什么要依赖？谁注入谁？注入了什么？
 
-比如，一个复杂的系统需要很多对象协同工作，而它们之间必然会产生相互依赖，当需要在一个对象中调用其它对象提供的方法时，通常是使用 new 关键字创建一个该类的实例，有经验的开发者可能会使用工厂模式或其它如建造者模式来创建对象，但总归是要开发者自己创建并管理。
+简单来说，就是应用程序依赖 IoC 容器（谁依赖谁），因为应用程序需要 IoC 容器来提供其依赖的对象或外部资源（为什么要依赖），IoC 容器向应用程序注入应用程序依赖的对象或外部资源，如实例对象、数据库连接、文件等（谁注入谁，注入了什么）。
