--- a/PartI/03-2.1.Dependency-Injection-and-Inversion-of-Control.md
+++ b/PartI/03-2.1.Dependency-Injection-and-Inversion-of-Control.md
@@ -1,6 +1,6 @@
 ## 2.1 依赖注入和控制反转
 
-**IoC（Inversion of Control，控制反转）**不是具体的技术，而是一种设计思想，其基本概念是：不创建对象，而是描述创建对象的方式（使用配置文件或注解方式描述）。在代码中不直接与依赖的对象关联，而是在配置文件中（或注解）描述依赖关系，由 IoC 容器负责创建对象并将其联系在一起（依赖注入）。
+**IoC（Inversion of Control，控制反转）**不是具体的技术，而是一种设计思想，其基本概念是：不创建对象，而是描述创建对象的方式（使用配置文件或注解方式描述）。在代码中不直接与依赖的对象关联，而是在配置文件（或注解）中描述依赖关系，由 IoC 容器负责创建对象并将其联系在一起（依赖注入）。
 
 要理解 IoC ，就要搞清楚这样几个问题：谁控制谁？控制什么？为何是反转？什么东西被反转了？
 
