--- a/PartI/04-2.2.Modules.md
+++ b/PartI/04-2.2.Modules.md
@@ -1,13 +1,9 @@
-## 2.2 Modules
+## 2.2 模块
 
-The Spring Framework consists of features organized into about 20 modules. These modules are grouped into Core Container, Data Access/Integration, Web, AOP \(Aspect Oriented Programming\), Instrumentation, Messaging, and Test, as shown in the following diagram.
+Spring 框架由大约 20 个功能模块组成，这些模块划分为 7 个部分，包括 Core Container（核心容器）、 Data Access/Integration（数据访问和事务控制）、 Web（MVC/WebSocket等）、 AOP（面向切面编程）、 Instrumentation（特定应用程序服务器中的类仪器支持和类加载器实现）, Messaging（基于消息的应用程序开发）、 Test（测试模块）。如下图所示——
 
-
-
-**Figure 2.1. Overview of the Spring Framework**
+**图 2.1. Spring 框架概述**
 
 ![](../images/spring-overview.png.pagespeed.ce.XVe1noRCMt.png "spring overview")
 
-
-The following sections list the available modules for each feature along with their artifact names and the topics they cover. Artifact names correlate to_artifact IDs_used in[Dependency Management tools](http://docs.spring.io/spring/docs/5.0.0.M4/spring-framework-reference/htmlsingle/#dependency-management).
-
+下面章节将介绍各个部分可用模块的构件名称及其包含的功能。以及各个构件在 [依赖管理工具](12-2.3.1.Dependency-Management-and-Naming-Conventions.md) 中定义的 _artifact id_。
