--- a/PartII/10-3.3.2-Instantiating-beans.md
+++ b/PartII/10-3.3.2-Instantiating-beans.md
@@ -121,5 +121,5 @@ public class DefaultServiceLocator {
 
 This approach shows that the factory bean itself can be managed and configured through dependency injection \(DI\). See [Dependencies and configuration in detail](http://docs.spring.io/spring/docs/5.0.0.M4/spring-framework-reference/htmlsingle/#beans-factory-properties-detailed).
 
-In Spring documentation, _factory bean_ refers to a bean that is configured in the Spring container that will create objects through an [instance](http://docs.spring.io/spring/docs/5.0.0.M4/spring-framework-reference/htmlsingle/#beans-factory-class-instance-factory-method) or [static](http://docs.spring.io/spring/docs/5.0.0.M4/spring-framework-reference/htmlsingle/#beans-factory-class-static-factory-method) factory method. By contrast, `FactoryBean` \(notice the capitalization\) refers to a Spring-specific [`FactoryBean`](http://docs.spring.io/spring/docs/5.0.0.M4/spring-framework-reference/htmlsingle/#beans-factory-extension-factorybean).
+> In Spring documentation, _factory bean_ refers to a bean that is configured in the Spring container that will create objects through an [instance](http://docs.spring.io/spring/docs/5.0.0.M4/spring-framework-reference/htmlsingle/#beans-factory-class-instance-factory-method) or [static](http://docs.spring.io/spring/docs/5.0.0.M4/spring-framework-reference/htmlsingle/#beans-factory-class-static-factory-method) factory method. By contrast, `FactoryBean` \(notice the capitalization\) refers to a Spring-specific [`FactoryBean`](http://docs.spring.io/spring/docs/5.0.0.M4/spring-framework-reference/htmlsingle/#beans-factory-extension-factorybean).
 
