--- a/PartI/0005-2.2.1-Core-Container.md
+++ b/PartI/0005-2.2.1-Core-Container.md
@@ -1,15 +1,9 @@
-### 2.2.1 Core Container
-
-The[_Core Container_](http://docs.spring.io/spring/docs/5.0.0.M4/spring-framework-reference/htmlsingle/#beans-introduction)consists of the`spring-core`,`spring-beans`,`spring-context`,`spring-context-support`, and`spring-expression`\(Spring Expression Language\) modules.
-
-The`spring-core`and`spring-beans`modules[provide the fundamental parts of the framework](http://docs.spring.io/spring/docs/5.0.0.M4/spring-framework-reference/htmlsingle/#beans-introduction), including the IoC and Dependency Injection features. The`BeanFactory`is a sophisticated implementation of the factory pattern. It removes the need for programmatic singletons and allows you to decouple the configuration and specification of dependencies from your actual program logic.
-
-The[_Context_](http://docs.spring.io/spring/docs/5.0.0.M4/spring-framework-reference/htmlsingle/#context-introduction)\(`spring-context`\) module builds on the solid base provided by the[_Core and Beans_](http://docs.spring.io/spring/docs/5.0.0.M4/spring-framework-reference/htmlsingle/#beans-introduction)modules: it is a means to access objects in a framework-style manner that is similar to a JNDI registry. The Context module inherits its features from the Beans module and adds support for internationalization \(using, for example, resource bundles\), event propagation, resource loading, and the transparent creation of contexts by, for example, a Servlet container. The Context module also supports Java EE features such as EJB, JMX, and basic remoting. The`ApplicationContext`interface is the focal point of the Context module.`spring-context-support`provides support for integrating common third-party libraries into a Spring application context, in particular for caching \(EhCache, JCache\) and scheduling \(CommonJ, Quartz\).
-
-The`spring-expression`module provides a powerful[_Expression Language_](http://docs.spring.io/spring/docs/5.0.0.M4/spring-framework-reference/htmlsingle/#expressions)for querying and manipulating an object graph at runtime. It is an extension of the unified expression language \(unified EL\) as specified in the JSP 2.1 specification. The language supports setting and getting property values, property assignment, method invocation, accessing the content of arrays, collections and indexers, logical and arithmetic operators, named variables, and retrieval of objects by name from Spring’s IoC container. It also supports list projection and selection as well as common list aggregations.
-
 ### 2.2.1 Core Container 核心容器
 
-核心容器由 `spring-core`、 `spring-beans`、 `spring-context`、 `spring-context-support`、 `spring-expression`（Spring 表达式语言）模块组成。
+[核心容器](../PartII/0016-3.1-Introduction-to-the-Spring-IoC-container-and-beans.md) 由 `spring-core`、 `spring-beans`、 `spring-context`、 `spring-context-support`、 `spring-expression`（Spring 表达式语言）模块组成。
 
-`spring-core` 和 `spring-beans` 提供了 Spring 框架的基本功能，包括 IoC 和依赖注入功能。其主要组件是 `BeanFactory`，它是一个复杂的工厂模式的实现，`BeanFactory` 可以以单例模式创建对象，开发者不必亲自编码实现对象的单例模式，`BeanFactory` 利用 IoC 将依赖关系的配置和规范从程序代码分离。
+`spring-core` 和 `spring-beans` 提供了 Spring 框架的基本功能，包括 IoC 和依赖注入特性。其主要组件是 `BeanFactory`，使用工厂模式实现，使开发者不必自己创建单例对象，并将依赖关系的配置和规范从程序代码分离。
+
+[Context（Spring 上下文）](../PartII/0082-3.15-Additional-Capabilities-of-the-ApplicationContext.md) 模块（`spring-context`）构建于 Core 和 Beans 基础之上，通过它可以使用框架风格（framework-style）的方式来访问对象，类似于 JNDI 服务注册。Context 模块继承了 Beans 模块的特性，并添加了国际化（资源绑定方式）、事件传播、资源加载、以及通过如 Servlet 容器透明创建上下文的功能。Context 模块还支持 Java EE 的特性，如EJB、JMX和基本的远程调用。`ApplicationContext` 接口是 Context 模块的重点。`spring-context-support` 提供了把常用第三方类库集成到 Spring 的支持，如缓存框架（EhCache、JCache）以及任务调度框架（CommonJ、Quartz）。
+
+`spring-expression`（SpEL）模块提供了一个强大的 [表达式语言](TODO.这里有一个链接到6.Spring Expression Language)，可用于运行时查询和操作对象。它是 JSP 2.1 规范中指定的统一表达式语言的一个扩展。SpEL 支持属性值的设置和获取、属性赋值、方法调用、数组访问、集合和索引、逻辑和算术运算、变量命名、并可以使用名称从 Spring 的 IoC 容器中检索对象。它还支持列表的投影和筛选，以及常用的列表聚合。
