--- a/PartI/0004-2.2-Modules.md
+++ b/PartI/0004-2.2-Modules.md
@@ -1,9 +1,9 @@
 ## 2.2 模块
 
-Spring 框架由大约 20 个功能模块组成，这些模块划分为 7 个部分，包括 Core Container（核心容器）、 Data Access/Integration（数据访问和事务控制）、 Web（MVC/WebSocket等）、 AOP（面向切面编程）、 Instrumentation（特定应用程序服务器中的类仪器支持和类加载器实现）, Messaging（基于消息的应用程序开发）、 Test（测试模块）。如下图所示——
+Spring 框架由大约 20 个功能模块组成，这些模块划分为 7 个部分，包括 Core Container（核心容器）、 Data Access/Integration（数据访问集成和事务控制）、 Web（MVC/WebSocket等）、 AOP（面向切面编程）、 Instrumentation（类级工具及类加载器实现）、 Messaging（基于消息的应用程序开发）、 Test（测试模块）。如下图所示——
 
 **图 2.1. Spring 框架概述**
 
 ![](../images/spring-overview.png.pagespeed.ce.XVe1noRCMt.png "spring overview")
 
-下面章节将介绍各个部分可用模块的构件名称及其包含的功能。以及各个构件在 [依赖管理工具](12-2.3.1-Dependency-Management-and-Naming-Conventions.md) 中定义的 _artifact id_。
+下面章节将介绍各个部分所包含模块的构件名称及其涵盖的功能，以及各个构件在 [依赖管理工具](12-2.3.1-Dependency-Management-and-Naming-Conventions.md) 中定义的 _artifact id_。
