--- a/PartI/0003-2.1-Dependency-Injection-and-Inversion-of-Control.md
+++ b/PartI/0003-2.1-Dependency-Injection-and-Inversion-of-Control.md
@@ -4,7 +4,7 @@
 
 要理解 IoC ，就要搞清楚这样几个问题：谁控制谁？控制什么？为何是反转？什么东西被反转了？
 
-一个复杂的系统需要很多对象协同工作，而它们之间必然会产生相互依赖，在传统程序设计中，当需要在一个对象中调用其它对象提供的方法时，通常是使用 new 关键字创建一个该类的实例，有经验的开发者可能会使用工厂模式或其它如建造者模式来创建对象，但总归是要开发者自己创建并管理。而在 IoC 思想中，由 IoC 容器来控制对象的创建（谁控制谁）。不光是对象的创建，包括外部资源的获取，如数据库连接、文件等（控制什么）。传统程序设计中，我们需要自己在对象中主动去创建或获取依赖对象（正），而 IoC 思想中，由 IoC 容器帮我们查找并注入依赖对象，对象只是被动的接受依赖对象（反转），也就是说，依赖对象的获取被反转了（什么东西被反转了）。
+一个复杂的系统需要很多对象协同工作，这些对象之间必然会产生相互依赖，在传统程序设计中，当需要在一个对象中调用其它对象提供的方法时，通常是使用 new 关键字创建一个该类的实例，有经验的开发者可能会使用工厂模式或其它如建造者模式来创建对象，但总归是要开发者自己创建并管理。而在 IoC 思想中，由 IoC 容器来控制对象的创建（谁控制谁）。不光是对象的创建，包括外部资源的获取，如数据库连接、文件等（控制什么）。传统程序设计中，我们需要自己在对象中主动去创建或获取依赖对象（正），而 IoC 思想中，由 IoC 容器帮我们查找并注入依赖对象，对象只是被动的接受依赖对象（反转），也就是说，依赖对象的获取被反转了（什么东西被反转了）。
 
 IoC 是 Spring 的核心，放在 Spring 框架中来说，就是由 Spring 负责控制对象的生命周期和对象之间的关系。利用 IoC 可以降低对象与对象之间的耦合度，使程序的体系结构变得更加灵活，同时方便测试和功能复用。
 
