--- a/PartI/0007-2.2.3-Messaging.md
+++ b/PartI/0007-2.2.3-Messaging.md
@@ -1,4 +1,3 @@
-### 2.2.3 Messaging
+### 2.2.3 Messaging 消息
 
-Spring Framework 4 includes a`spring-messaging`module with key abstractions from the_Spring Integration_project such as`Message`,`MessageChannel`,`MessageHandler`, and others to serve as a foundation for messaging-based applications. The module also includes a set of annotations for mapping messages to methods, similar to the Spring MVC annotation based programming model.
-
+从 Spring 4 开始引入了一个 `spring-messaging` 模块，其包含了 Spring Integration 项目的高度抽象，如 `Message`、 `MessageChannel`、 `MessageHandler` 等，为开发基于消息的应用程序提供基础。该模块还包含了一系列用来将消息映射到方法的注解，类似于 Spring MVC 的注解。
