--- a/PartI/0008-2.2.4-Data-Access-Integration.md
+++ b/PartI/0008-2.2.4-Data-Access-Integration.md
@@ -1,14 +1,13 @@
-### 2.2.4 Data Access/Integration
+### 2.2.4 Data Access/Integration 数据访问/集成
 
-The_Data Access/Integration_layer consists of the JDBC, ORM, OXM, JMS, and Transaction modules.
+数据访问/集成层是由JDBC、ORM、OXM、JMS和事务模块组成。
 
-The`spring-jdbc`module provides a[JDBC](http://docs.spring.io/spring/docs/5.0.0.M4/spring-framework-reference/htmlsingle/#jdbc-introduction)-abstraction layer that removes the need to do tedious JDBC coding and parsing of database-vendor specific error codes.
+`spring-jdbc` 构件提供了一个 JDBC 抽象层，屏蔽了繁琐的 JDBC 编码，以及对不同数据库错误的适配解析，从而简化 JDBC 的开发。
 
-The`spring-tx`module supports[programmatic and declarative transaction](http://docs.spring.io/spring/docs/5.0.0.M4/spring-framework-reference/htmlsingle/#transaction)management for classes that implement special interfaces and for_all your POJOs \(Plain Old Java Objects\)_.
+`spring-tx` 构件为实现了特殊接口的类以及普通的 POJO 类提供编程式和声明式的事务管理功能。
 
-The`spring-orm`module provides integration layers for popular[object-relational mapping](http://docs.spring.io/spring/docs/5.0.0.M4/spring-framework-reference/htmlsingle/#orm-introduction)APIs, including[JPA](http://docs.spring.io/spring/docs/5.0.0.M4/spring-framework-reference/htmlsingle/#orm-jpa)and[Hibernate](http://docs.spring.io/spring/docs/5.0.0.M4/spring-framework-reference/htmlsingle/#orm-hibernate). Using the`spring-orm`module you can use these O/R-mapping frameworks in combination with all of the other features Spring offers, such as the simple declarative transaction management feature mentioned previously.
+`spring-orm` 可以将当下流行的 ORM（Object-Relational Mapping，对象关系映射）框架集成到 Spring 中，包括 JPA、 Hibernate、 Mybatis 等。并可以与 Spring 的其它功能结合使用，比如前面提到的声明式事务管理功能。
 
-The`spring-oxm`module provides an abstraction layer that supports[Object/XML mapping](http://docs.spring.io/spring/docs/5.0.0.M4/spring-framework-reference/htmlsingle/#oxm)implementations such as JAXB, Castor, JiBX and XStream.
+`spring-oxm` 提供了一个可以将 OXM（Object-XML Mapping，对象XML映射）框架集成到 Spring 的抽象层，比如 JAXB、 Castor、 JiBX 以及 XStream。
 
-The`spring-jms`module \([Java Messaging Service](http://docs.spring.io/spring/docs/5.0.0.M4/spring-framework-reference/htmlsingle/#jms)\) contains features for producing and consuming messages. Since Spring Framework 4.1, it provides integration with the`spring-messaging`module.
-
+`spring-jms` （Java Messaging Service，Java 消息服务）包含消息的生产和消费功能。从 Spring 4 开始可以与 `spring-messaging` 模块集成。
