--- a/PartI/0009-2.2.5-Web.md
+++ b/PartI/0009-2.2.5-Web.md
@@ -1,8 +1,9 @@
 ### 2.2.5 Web
 
-The_Web_layer consists of the`spring-web`,`spring-webmvc`and`spring-websocket`modules.
+Web 层包括 `spring-web`、 `spring-webmvc` 以及 `spring-websocket`。
 
-The`spring-web`module provides basic web-oriented integration features such as multipart file upload functionality and the initialization of the IoC container using Servlet listeners and a web-oriented application context. It also contains an HTTP client and the web-related parts of Spring’s remoting support.
+`spring-web` 提供了基本的面向 Web 的集成开发功能，例如文件上传功能，以及 Servlet 监听器和适用于 Web 应用的上下文（WebApplicationContext），并用其来初始化 IoC 容器。另外还包含一个 HTTP 客户端和 Web 相关的远程访问支持（RMI、 WebService）。
 
-The`spring-webmvc`module \(also known as the_Web-Servlet_module\) contains Spring’s model-view-controller \([_MVC_](http://docs.spring.io/spring/docs/5.0.0.M4/spring-framework-reference/htmlsingle/#mvc-introduction)\) and REST Web Services implementation for web applications. Spring’s MVC framework provides a clean separation between domain model code and web forms and integrates with all of the other features of the Spring Framework.
+`spring-webmvc` 提供了一套针对 Web 应用的 MVC（Model-View-Controller，模型-视图-控制器）设计模式的实现，并支持 REST 风格 Web 服务的开发。Spring 的 MVC 框架可以使领域模型代码和 Web 表单之间清楚的分离开来，并可以轻松集成 Spring 框架的其它功能。
 
+`spring-websocket` 从 Spring 4 开始引入，兼容 Java WebSocket API 标准（[JSR-356](https://jcp.org/en/jsr/detail?id=356)），能够全面支持 WebSocket，实现浏览器与服务器全双工通信。
