--- a/PartI/0010-2.2.6-Test.md
+++ b/PartI/0010-2.2.6-Test.md
@@ -1,4 +1,3 @@
-### 2.2.6 Test
+### 2.2.6 Test 测试
 
-The`spring-test`module supports the[unit testing](http://docs.spring.io/spring/docs/5.0.0.M4/spring-framework-reference/htmlsingle/#unit-testing)and[integration testing](http://docs.spring.io/spring/docs/5.0.0.M4/spring-framework-reference/htmlsingle/#integration-testing)of Spring components with JUnit or TestNG. It provides consistent[loading](http://docs.spring.io/spring/docs/5.0.0.M4/spring-framework-reference/htmlsingle/#testcontext-ctx-management)of Spring`ApplicationContext`s and[caching](http://docs.spring.io/spring/docs/5.0.0.M4/spring-framework-reference/htmlsingle/#testcontext-ctx-management-caching)of those contexts. It also provides[mock objects](http://docs.spring.io/spring/docs/5.0.0.M4/spring-framework-reference/htmlsingle/#mock-objects)that you can use to test your code in isolation.
-
+`spring-test` 支持使用 JUnit 或 TestNG 对 Spring 组件进行单元测试和集成测试。它提供 Spring `ApplicationContext` 的加载和缓存功能，另外还提供了 mock 对象，可以方便的对代码进行隔离测试。
