--- a/PartI/0005-2.2.1-Core-Container.md
+++ b/PartI/0005-2.2.1-Core-Container.md
@@ -1,9 +1,9 @@
 ### 2.2.1 Core Container 核心容器
 
-核心容器由 `spring-core`、 `spring-beans`、 `spring-context`、 `spring-context-support`、 `spring-expression` 构件组成。
+核心容器由 `spring-core`、 `spring-beans`、 `spring-context`、 `spring-context-support`、 `spring-expression` 模块组成。
 
 `spring-core` 和 `spring-beans` 提供了 Spring 框架的基本功能，包括 IoC 和依赖注入特性。其主要组件是 `BeanFactory`，使用工厂模式实现，使开发者不必自己创建单例对象，并将依赖关系的配置和规范从程序代码分离。
 
-上下文（`spring-context`）构建于 Core 和 Beans 基础之上，通过它可以使用框架风格（framework-style）的方式来访问对象，类似于 JNDI 服务注册。Context 模块继承了 Beans 模块的特性，并添加了国际化（资源绑定方式）、事件传播、资源加载、以及通过如 Servlet 容器透明创建上下文的功能。Context 模块还支持 Java EE 的特性，如EJB、JMX和基本的远程调用。`ApplicationContext` 接口是 Context 模块的重点。`spring-context-support` 提供了把常用第三方类库集成到 Spring 的支持，如缓存框架（EhCache、JCache）以及任务调度框架（CommonJ、Quartz）等。
+Context（`spring-context`）模块构建于 Core 和 Beans 基础之上，通过它可以使用框架风格（framework-style）的方式来访问对象，类似于 JNDI 服务注册。Context 模块继承了 Beans 模块的特性，并添加了国际化（资源绑定方式）、事件传播、资源加载、以及通过如 Servlet 容器透明创建上下文的功能。Context 模块还支持 Java EE 的特性，如 EJB、 JMX 和基本的远程调用。`ApplicationContext` 接口是 Context 模块的重点。`spring-context-support` 提供了把常用第三方类库集成到 Spring 的支持，如缓存框架（EhCache、JCache）以及任务调度框架（CommonJ、Quartz）等。
 
 SpEL `spring-expression`（Spring Expression Language，Spring 表达式语言）模块提供了一个强大的表达式语言，可用于运行时查询和操作对象。它是 JSP 2.1 规范中指定的统一表达式语言的一个扩展。SpEL 支持属性值的设置和获取、属性赋值、方法调用、数组访问、集合和索引、逻辑和算术运算、变量命名、并可以使用名称从 Spring 的 IoC 容器中检索对象。它还支持列表的投影和筛选，以及常用的列表聚合。
