--- a/PartI/0006-2.2.2-AOP-and-Instrumentation.md
+++ b/PartI/0006-2.2.2-AOP-and-Instrumentation.md
@@ -1,15 +1,15 @@
 ### 2.2.2 AOP 和 Instrumentation
 
-`spring-aop` 提供了面向切面编程（AOP，Aspect-Oriented Programming）的支持。
+`spring-aop` 模块提供了面向切面编程（AOP，Aspect-Oriented Programming）的支持。
 
-AOP 其实是对 OOP（Object-Oriented Programming，面向对象编程）的补充和完善。OOP 引进抽象、封装、继承、多态等概念对事物进行抽象和封装，建立一种对象的层次结构，强调的是事物自上而下的纵向关系，但对横向关系则显得捉襟见肘，例如日志记录、权限控制、事务管理、性能统计、异常处理等公用行为，这些行为的特点是与应用程序的核心业务无关，却往往散布在所有对象层次中，这导致大量的重复代码，而且一旦这些公用行为的逻辑发生变化，那所有用到的地方都要修改。而 AOP 则将那些公用行为封装成独立的代码块，利用一种称为“横切”的技术，剖解开封装核心业务的对象内部，并将公用代码块融入到业务逻辑中，这样对公用代码的更新和重用都能带来极大的便利。
+AOP 其实是对 OOP（Object-Oriented Programming，面向对象编程）的补充和完善。OOP 引进抽象、封装、继承、多态等概念对事物进行抽象和封装，建立一种对象的层次结构，强调的是事物自上而下的纵向关系，但对横向关系则显得捉襟见肘，例如日志记录、权限控制、事务管理、性能统计、异常处理等公用行为，这些行为的特点是与应用程序的核心业务无关，却往往散布在所有对象层次中，这导致大量的重复代码，而且一旦这些公用行为的逻辑发生变化，那所有用到的地方都要修改。而 AOP 则将那些公用行为封装成独立的代码块，利用一种称为“横切”的技术，剖解开封装核心业务的对象内部，并将公用代码块融入到业务逻辑中，这样做对公用代码的更新和重用都能带来极大的便利。
 
 Spring 的 AOP 支持基于 [AOP 联盟](http://aopalliance.sourceforge.net) 定义的 API。允许你定义方法的拦截器和切入点，以便干净的将公用代码从业务代码中分离出来。你也可以使用源码级的元数据功能将行为合并到代码中，这类似于 .NET 中的 Attribute 概念。
 
-`spring-aspects` 构件提供了集成 AspectJ 的功能，AspectJ 是一个成熟且功能强大的 AOP 框架。
+`spring-aspects` 模块提供了集成 AspectJ 的功能，AspectJ 是一个成熟且功能强大的 AOP 框架。
 
 `spring-instrument` 提供类级 Instrumentation 功能的支持，以及针对特定应用服务器的类加载器实现。
 
 关于 Instrumentation 这个概念不太好翻译，简单来讲就是一种在运行过程中动态加载代理的能力，使用 Instrumentation 可以构建一个独立于应用程序的代理程序，用来监测或协助应用程序的运行，甚至可以动态替换和修改类的定义，更详细的信息可以参考 Java SE 的 Instrumentation 功能。
 
-`spring-instrument-tomcat` 构件包含针对 Tomcat 的 Instrumentation 代理。
+`spring-instrument-tomcat` 模块包含针对 Tomcat 的 Instrumentation 代理。
