--- a/PartI/0008-2.2.4-Data-Access-Integration.md
+++ b/PartI/0008-2.2.4-Data-Access-Integration.md
@@ -1,10 +1,10 @@
 ### 2.2.4 Data Access/Integration 数据访问/集成
 
-数据访问/集成层是由JDBC、ORM、OXM、JMS和事务模块组成。
+数据访问/集成层是由 JDBC、 ORM、 OXM、 JMS 和事务模块组成。
 
-`spring-jdbc` 构件提供了一个 JDBC 抽象层，屏蔽了繁琐的 JDBC 编码，以及对不同数据库错误的适配解析，从而简化 JDBC 的开发。
+`spring-jdbc` 模块提供了一个 JDBC 抽象层，屏蔽了繁琐的 JDBC 编码，并对不同数据库错误进行统一的适配封装，从而简化 JDBC 的开发。
 
-`spring-tx` 构件为实现了特殊接口的类以及普通的 POJO 类提供编程式和声明式的事务管理功能。
+`spring-tx` 模块为实现了特殊接口的类以及普通的 POJO 类提供编程式和声明式的事务管理功能。
 
 `spring-orm` 可以将当下流行的 ORM（Object-Relational Mapping，对象关系映射）框架集成到 Spring 中，包括 JPA、 Hibernate、 Mybatis 等。并可以与 Spring 的其它功能结合使用，比如前面提到的声明式事务管理功能。
 
