--- a/PartI/0008-2.2.4-Data-Access-Integration.md
+++ b/PartI/0008-2.2.4-Data-Access-Integration.md
@@ -6,7 +6,7 @@
 
 `spring-tx` 模块为实现了特殊接口的类以及普通的 POJO 类提供编程式和声明式的事务管理功能。
 
-`spring-orm` 可以将当下流行的 ORM（Object-Relational Mapping，对象关系映射）框架集成到 Spring 中，包括 JPA、 Hibernate、 Mybatis 等。并可以与 Spring 的其它功能结合使用，比如前面提到的声明式事务管理功能。
+`spring-orm` 可以将当下流行的 ORM（Object-Relational Mapping，对象关系映射）框架集成到 Spring 中，包括 JPA、 Hibernate、 MyBatis 等。并可以与 Spring 的其它功能结合使用，比如前面提到的声明式事务管理功能。
 
 `spring-oxm` 提供了一个可以将 OXM（Object-XML Mapping，对象XML映射）框架集成到 Spring 的抽象层，比如 JAXB、 Castor、 JiBX 以及 XStream。
 
