--- a/PartI/0011-2.3-Usage-scenarios.md
+++ b/PartI/0011-2.3-Usage-scenarios.md
@@ -1,19 +1,12 @@
-## 2.3 Usage scenarios
+## 2.3 使用场景
 
-The building blocks described previously make Spring a logical choice in many scenarios, from embedded applications that run on resource-constrained devices to full-fledged enterprise applications that use Spring’s transaction management functionality and web framework integration.
+Spring 是一个轻量级的框架，其各个模块之间没有很强的耦合性，而且可以集成其它开发框架，如 Hibernate、 Mybatis、JavaMail、 JMS、 JPA、 JNDI 等，它所提供的服务可以贯穿整个软件的各个层面。我们可以对这些服务灵活的选择搭配，用于各种开发场景，从受限设备的嵌入式应用到使用了事务管理功能和 Web 框架的完整企业级应用都能得到很好的支持。比如 Spring 的 IoC 容器是直接依赖 JVM 的，我们可以在 Java 环境中（如 Android）单独使用 Spring IoC 容器；再比如使用 Spring、 Spring MVC、 MyBatis 集成开发一个完整的企业级应用。
 
-
-
-**Figure 2.2. Typical full-fledged Spring web application**
+**图 2.2. Spring Web 典型应用的完整案例**
 
 ![](../images/overview-full.png.pagespeed.ce.sC26wirtWB.png "overview full")
 
-  
-
-
-Spring’s[declarative transaction management features](http://docs.spring.io/spring/docs/5.0.0.M4/spring-framework-reference/htmlsingle/#transaction-declarative)make the web application fully transactional, just as it would be if you used EJB container-managed transactions. All your custom business logic can be implemented with simple POJOs and managed by Spring’s IoC container. Additional services include support for sending email and validation that is independent of the web layer, which lets you choose where to execute validation rules. Spring’s ORM support is integrated with JPA and Hibernate; for example, when using Hibernate, you can continue to use your existing mapping files and standard Hibernate`SessionFactory`configuration. Form controllers seamlessly integrate the web-layer with the domain model, removing the need for`ActionForms`or other classes that transform HTTP parameters to values for your domain model.
-
-
+Spring 的声明式事务管理特性使 Web 应用可以具备完整的事务性，就像使用 EJB 容器管理事务一样。所有的自定义业务逻辑都可以使用简单的 POJOs 实现，并由 Spring IoC 容器进行管理。其它的附加服务包括邮件支持，以及独立于 Web 层的数据校验功能（可以让你选择执行校验的位置）。Spring 的 ORM 框架集成了 JPA 和 Hibernate，当使用 Hibernate 时， 可以继续使用已有的映射文件和标准的 Hibernate `SessionFactory` 配置。表单控制器无缝整合了 Web 层和领域模型，从而无需进行从 HTTP 参数到领域模型转换的处理（如 `ActionForm`）。
 
 **Figure 2.3. Spring middle-tier using a third-party web framework**
 
