--- a/PartI/0012-2.3.1-Dependency-Management-and-Naming-Conventions.md
+++ b/PartI/0012-2.3.1-Dependency-Management-and-Naming-Conventions.md
@@ -1,50 +1,45 @@
-[toc]
+### 2.3.1 依赖管理和命名约定
 
-[TOC]
+依赖管理和依赖注入不是同一个概念，为了在你的应用程序中使用 Spring 的功能（如依赖注入），你需要在编译或运行期将所依赖的库（jar文件）导入到应用的 classpath 中。这些依赖关系通常是文件系统中的物理资源，而非依赖注入概念中由 IoC 容器创建的抽象资源。依赖关系的管理过程包括对这些资源的定位、存储、以及将其添加到 classpath 中。依赖关系可以是直接的（例如应用程序在运行时依赖于 Spring），也可以是间接的（例如应用程序依赖于 commons-pool，而commons-pool 依赖于 commons-dbcp，故应用程序间接依赖于 commons-dbcp）。间接依赖关系也被称为“传递性”依赖，属于最难识别和管理的依赖关系。
 
-### 2.3.1 Dependency Management and Naming Conventions
+如果要使用 Spring，你需要获得一个包含你所需功能的库文件（jar），Spring 被打包为一系列模块，各个模块之间尽可能的分离依赖关系，以便你可以只使用需要的模块而忽略其余模块，例如，如果你不是编写 Web 应用程序，则不需要引入 `spring-web` 模块。Spring 各模块的库文件使用一种简写约定命名，如 `spring-*` 或 `spring-*.jar`，其中 `*` 表示模块名称（如 `spring-core`、 `spring-web-mvc`、 `spring-jms` 等）。实际使用的 jar 文件名通常在模块名后以短横线连接了该模块的版本号（如 `spring-core-5.0.0.M4.jar`）。
 
-Dependency management and dependency injection are different things. To get those nice features of Spring into your application \(like dependency injection\) you need to assemble all the libraries needed \(jar files\) and get them onto your classpath at runtime, and possibly at compile time. These dependencies are not virtual components that are injected, but physical resources in a file system \(typically\). The process of dependency management involves locating those resources, storing them and adding them to classpaths. Dependencies can be direct \(e.g. my application depends on Spring at runtime\), or indirect \(e.g. my application depends on`commons-dbcp`which depends on`commons-pool`\). The indirect dependencies are also known as "transitive" and it is those dependencies that are hardest to identify and manage.
+Spring 框架的每个版本都会将库文件发布到以下位置：
 
-If you are going to use Spring you need to get a copy of the jar libraries that comprise the pieces of Spring that you need. To make this easier Spring is packaged as a set of modules that separate the dependencies as much as possible, so for example if you don’t want to write a web application you don’t need the spring-web modules. To refer to Spring library modules in this guide we use a shorthand naming convention`spring-*`or`spring-*.jar,`where`*`represents the short name for the module \(e.g.`spring-core`,`spring-webmvc`,`spring-jms`, etc.\). The actual jar file name that you use is normally the module name concatenated with the version number \(e.g._spring-core-5.0.0.M4.jar_\).
+* **[Maven Central](https://search.maven.org)**，Maven 默认的查询仓库，不需要任何特殊配置即可使用，许多 Spring 依赖的库也可以在这里找到，Spring 社区的大部分项目都是使用 Maven 进行依赖管理。在 Maven 中 Spring 模块的 jar 名称（artifactId）是 `spring-*-<version>.jar` 的形式，groupId 为 `org.springframework`。
+* **[一个专门用于 Spring 的公共 Maven 仓库](http://maven.springframework.org)**，除了最终的 GA 版本，这个仓库还存储快照版本（[snapshots](http://maven.springframework.org/snapshot)）和里程碑版本（[milestones](http://maven.springframework.org/milestone)）。其中的 jar 文件命名与 Maven Central 一致，这里可以用于获取 Spring 的开发版本，并可以和 Maven Central 配合使用。这里还存储着包含 Spring 所有模块的 zip 文件包，便于一次性下载 Spring 的所有 jar 文件。
 
-Each release of the Spring Framework will publish artifacts to the following places:
-
-* Maven Central, which is the default repository that Maven queries, and does not require any special configuration to use. Many of the common libraries that Spring depends on also are available from Maven Central and a large section of the Spring community uses Maven for dependency management, so this is convenient for them. The names of the jars here are in the form `spring-*-<version>.jar` and the Maven groupId is `org.springframework`.
-* In a public Maven repository hosted specifically for Spring. In addition to the final GA releases, this repository also hosts development snapshots and milestones. The jar file names are in the same form as Maven Central, so this is a useful place to get development versions of Spring to use with other libraries deployed in Maven Central. This repository also contains a bundle distribution zip file that contains all Spring jars bundled together for easy download.
-
-So the first thing you need to decide is how to manage your dependencies: we generally recommend the use of an automated system like Maven, Gradle or Ivy, but you can also do it manually by downloading all the jars yourself.
+你首先需要决定如何管理你的依赖关系，我们建议使用一个自动化的依赖管理工具，如 Maven、 Gradle、 或 Ivy，当然你也可以手动下载所有的 jar 文件。
 
 You will find bellow the list of Spring artifacts. For a more complete description of each modules, see[Section 2.2, “Modules”](http://docs.spring.io/spring/docs/5.0.0.M4/spring-framework-reference/htmlsingle/#overview-modules).
+下表为 Spring 各模块的构件列表，有关各个模块的详细描述可以参考 [2.2 模块](0004-2.2-Modules.md)。
 
-
-
-**Table 2.1. Spring Framework Artifacts**
+**表 2.1. Spring 框架构件列表**
 
 | GroupId | ArtifactId | Description |
 | :--- | :--- | :--- |
-| org.springframework | spring-aop | Proxy-based AOP support |
-| org.springframework | spring-aspects | AspectJ based aspects |
-| org.springframework | spring-beans | Beans support, including Groovy |
-| org.springframework | spring-context | Application context runtime, including scheduling and remoting abstractions |
-| org.springframework | spring-context-support | Support classes for integrating common third-party libraries into a Spring application context |
-| org.springframework | spring-core | Core utilities, used by many other Spring modules |
-| org.springframework | spring-expression | Spring Expression Language \(SpEL\) |
-| org.springframework | spring-instrument | Instrumentation agent for JVM bootstrapping |
-| org.springframework | spring-instrument-tomcat | Instrumentation agent for Tomcat |
-| org.springframework | spring-jdbc | JDBC support package, including DataSource setup and JDBC access support |
-| org.springframework | spring-jms | JMS support package, including helper classes to send and receive JMS messages |
-| org.springframework | spring-messaging | Support for messaging architectures and protocols |
-| org.springframework | spring-orm | Object/Relational Mapping, including JPA and Hibernate support |
-| org.springframework | spring-oxm | Object/XML Mapping |
-| org.springframework | spring-test | Support for unit testing and integration testing Spring components |
-| org.springframework | spring-tx | Transaction infrastructure, including DAO support and JCA integration |
-| org.springframework | spring-web | Web support packages, including client and web remoting |
-| org.springframework | spring-webmvc | REST Web Services and model-view-controller implementation for web applications |
-| org.springframework | spring-websocket | WebSocket and SockJS implementations, including STOMP support |
+| org.springframework | spring-aop | 基于代理的 AOP 支持 |
+| org.springframework | spring-aspects | 集成 AspectJ 框架提供切面支持 |
+| org.springframework | spring-beans | Bean 支持，包括对 Groovy Bean 的支持 |
+| org.springframework | spring-context | 应用程序上下文运行时 |
+| org.springframework | spring-context-support | 将第三方库集成到 Spring 上下文的类 |
+| org.springframework | spring-core | 核心工具模块，其它的 Spring 模块大都依赖它 |
+| org.springframework | spring-expression | Spring 表达式语言（SpEL） |
+| org.springframework | spring-instrument | Instrumentation 代理 |
+| org.springframework | spring-instrument-tomcat | 针对 Tomcat 的 Instrumentation 代理 |
+| org.springframework | spring-jdbc | JDBC 数据源设置及访问 |
+| org.springframework | spring-jms | JMS 支持，包括收发 JMS 消息的辅助类 |
+| org.springframework | spring-messaging | 基于消息的应用开发支持 |
+| org.springframework | spring-orm | 对象关系映射，支持 JPA、 Hibernate 等 ORM 框架的集成 |
+| org.springframework | spring-oxm | 对象XML映射 |
+| org.springframework | spring-test | 支持对 Spring 组件的单元测试和集成测试 |
+| org.springframework | spring-tx | 事务支持，包括 DAO 支持 和 JCA 集成 |
+| org.springframework | spring-web | Web 开发支持，包括 HTTP 客户端和远程处理 |
+| org.springframework | spring-webmvc | REST 风格的 Web 服务，以及 MVC 模式的实现 |
+| org.springframework | spring-websocket | WebSocket 和 SockJS 的实现，支持 STOMP |
 
   
-#### Spring Dependencies and Depending on Spring
+#### Spring 依赖管理
 
 Although Spring provides integration and support for a huge range of enterprise and other external tools, it intentionally keeps its mandatory dependencies to an absolute minimum: you shouldn’t have to locate and download \(even automatically\) a large number of jar libraries in order to use Spring for simple use cases. For basic dependency injection there is only one mandatory external dependency, and that is for logging \(see below for a more detailed description of logging options\).
 
