--- a/PartI/0012-2.3.1-Dependency-Management-and-Naming-Conventions.md
+++ b/PartI/0012-2.3.1-Dependency-Management-and-Naming-Conventions.md
@@ -2,7 +2,7 @@
 
 依赖管理和依赖注入不是同一个概念，为了在你的应用程序中使用 Spring 的功能（如依赖注入），你需要在编译或运行期将所依赖的库（jar文件）导入到应用的 classpath 中。这些依赖关系通常是文件系统中的物理资源，而非依赖注入概念中由 IoC 容器创建的抽象资源。依赖关系的管理过程包括对这些资源的定位、存储、以及将其添加到 classpath 中。依赖关系可以是直接的（例如应用程序在运行时依赖于 Spring），也可以是间接的（例如应用程序依赖于 commons-pool，而commons-pool 依赖于 commons-dbcp，故应用程序间接依赖于 commons-dbcp）。间接依赖关系也被称为“传递性”依赖，属于最难识别和管理的依赖关系。
 
-如果要使用 Spring，你需要获得一个包含你所需功能的库文件（jar），Spring 被打包为一系列模块，各个模块之间尽可能的分离依赖关系，以便你可以只使用需要的模块而忽略其余模块，例如，如果你不是编写 Web 应用程序，则不需要引入 `spring-web` 模块。Spring 各模块的库文件使用一种简写约定命名，如 `spring-*` 或 `spring-*.jar`，其中 `*` 表示模块名称（如 `spring-core`、 `spring-web-mvc`、 `spring-jms` 等）。实际使用的 jar 文件名通常在模块名后以短横线连接了该模块的版本号（如 `spring-core-5.0.0.M4.jar`）。
+如果要使用 Spring，你需要获得一个包含你所需功能的库文件（jar），Spring 被打包为一系列模块，各个模块之间尽可能的分离依赖关系，以便你可以只使用需要的模块而忽略其余模块，例如，如果你不是编写 Web 应用程序，则不需要引入 `spring-web` 模块。Spring 各模块的库文件使用一种简写约定命名，如 `spring-*` 或 `spring-*.jar`，其中 `*` 表示模块名称（如 `spring-core`、 `spring-webmvc`、 `spring-jms` 等）。实际使用的 jar 文件名通常在模块名后以短横线连接了该模块的版本号（如 `spring-core-5.0.0.M4.jar`）。
 
 Spring 框架的每个版本都会将库文件发布到以下位置：
 
