--- a/PartI/0012-2.3.1-Dependency-Management-and-Naming-Conventions.md
+++ b/PartI/0012-2.3.1-Dependency-Management-and-Naming-Conventions.md
@@ -21,7 +21,7 @@ Spring 框架的每个版本都会将库文件发布到以下位置：
 | org.springframework | spring-aspects | 集成 AspectJ 框架提供切面支持 |
 | org.springframework | spring-beans | Bean 支持，包括对 Groovy Bean 的支持 |
 | org.springframework | spring-context | 应用程序上下文运行时 |
-| org.springframework | spring-context-support | 将第三方库集成到 Spring 上下文的类 |
+| org.springframework | spring-context-support | 提供将第三方库集成到 Spring 上下文的类 |
 | org.springframework | spring-core | 核心工具模块，其它的 Spring 模块大都依赖它 |
 | org.springframework | spring-expression | Spring 表达式语言（SpEL） |
 | org.springframework | spring-instrument | Instrumentation 代理 |
