--- a/PartI/0012-2.3.1-Dependency-Management-and-Naming-Conventions.md
+++ b/PartI/0012-2.3.1-Dependency-Management-and-Naming-Conventions.md
@@ -26,7 +26,7 @@ Spring 框架的每个版本都会将库文件发布到以下位置：
 | org.springframework | spring-expression | Spring 表达式语言（SpEL） |
 | org.springframework | spring-instrument | Instrumentation 代理 |
 | org.springframework | spring-instrument-tomcat | 针对 Tomcat 的 Instrumentation 代理 |
-| org.springframework | spring-jdbc | JDBC 数据源设置及访问 |
+| org.springframework | spring-jdbc | JDBC 编程支持，包括数据源的设置及访问 |
 | org.springframework | spring-jms | JMS 支持，包括收发 JMS 消息的辅助类 |
 | org.springframework | spring-messaging | 基于消息的应用开发支持 |
 | org.springframework | spring-orm | 对象关系映射，支持 JPA、 Hibernate 等 ORM 框架的集成 |
